<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.furkanmulayim.cardholder.ui.add_future.AddCardFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/choice_700"
        tools:context=".ui.add_future.AddCardFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/name_add_card"
            android:textColor="@color/light_text"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/screen_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:paddingBottom="5dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.add_future.AddCardFragment">

                <ImageView
                    android:id="@+id/cardBackground"
                    android:layout_width="370dp"
                    android:layout_height="233.8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/card4"
                    android:contentDescription="@string/err"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textCvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/spa_ca"
                    android:text="@{viewModel.cardCvv}"
                    android:textColor="@color/light_text"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/cardBackground"
                    app:layout_constraintStart_toStartOf="@+id/cardBackground"
                    app:layout_constraintTop_toTopOf="@+id/cardBackground" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spa_ca"
                    android:text="@string/add_new_card_cvv"
                    android:textColor="@color/hint_text"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/textCvv"
                    app:layout_constraintStart_toStartOf="@+id/textCvv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="370dp"
                    android:layout_height="233.8dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@{viewModel.cardName}"
                        android:textColor="@color/light_text"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spa_ca"
                        android:text="@string/card_name"
                        android:textColor="@color/hint_text"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spa_ca"
                        android:text="@string/add_new_card_number"
                        android:textColor="@color/hint_text"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@{viewModel.cardNumber}"
                        android:textColor="@color/light_text"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spa_ca"
                        android:text="@string/card_name_surname"
                        android:textColor="@color/hint_text"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@{viewModel.cardNameSurname}"
                        android:textColor="@color/light_text"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spa_ca"
                        android:text="@string/text_year_month_hint"
                        android:textColor="@color/hint_text"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@{viewModel.cardYear}"
                        android:textColor="@color/light_text"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@string/card_div"
                        android:textColor="@color/light_text"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView88"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/spa_ca"
                        android:text="@{viewModel.cardMonth}"
                        android:textColor="@color/light_text"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--Text Kart İsmi-->
                <EditText
                    android:id="@+id/textAddCardName"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:autofillHints="name"
                    android:background="@drawable/sign_text_border"
                    android:gravity="center_vertical"
                    android:hint="@string/add_new_card_name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardBackground" />

                <!--Text Kart Numarası-->
                <EditText
                    android:id="@+id/textAddCardNumber"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:autofillHints="creditCardNumber"
                    android:background="@drawable/sign_text_border"
                    android:gravity="center_vertical"
                    android:hint="@string/add_new_card_number"
                    android:inputType="number"
                    android:maxLength="16"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardName" />

                <!--Text Kart İsmi Soyismi-->
                <EditText
                    android:id="@+id/textAddCardNameAndSurname"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="name"
                    android:background="@drawable/sign_text_border"
                    android:hint="@string/add_new_card_name_surname"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:maxLength="22"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardNumber" />

                <!--Text Kart Ay -->
                <EditText
                    android:id="@+id/textAddCardMonth"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="creditCardExpirationMonth"
                    android:background="@drawable/sign_text_border"
                    android:hint="@string/add_new_card_month"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/textAddCardNameAndSurname"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardNameAndSurname" />


                <!--Text Kart Ay -->
                <EditText
                    android:id="@+id/textAddCardYear"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="creditCardExpirationYear"
                    android:background="@drawable/sign_text_border"
                    android:hint="@string/add_new_card_year"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/textAddCardNameAndSurname"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardNameAndSurname" />


                <!--Text Kart Cvv Kodu-->
                <EditText
                    android:id="@+id/textAddCardCvvCode"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="no"
                    android:background="@drawable/sign_text_border"
                    android:hint="@string/add_new_card_cvv"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardMonth" />


                <Button
                    android:id="@+id/addCardButton"
                    android:layout_width="370dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/choice_700"
                    android:text="@string/card_add"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAddCardCvvCode" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
